--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,11 @@ spring.profiles.active=development
 
 #Server configuration
 server.port=8081
+
+#SPRING MAAIL CONFIGURATION
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=haystack.placeholder@gmail.com
+spring.mail.password=Haystack2022
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
